cluster-policies/host-fw-control-plane.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "host-fw-control-plane"
spec:
  description: "control-plane specific access rules."
  nodeSelector:
    matchLabels:
      node-role.kubernetes.io/control-plane: ""
  ingress:
  # Allow access to kube api from anywhere.
  - fromEntities:
    - world
    - cluster
    toPorts:
    - ports:
      - port: "8443"
        protocol: "TCP"
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "host-fw-flux"
  namespace: flux-system
spec:
  description: "flux-plane specific access rules."
  endpointSelector:
    matchLabels:
      {}
  ingress:
  - fromEntities:
    - world
    - cluster
    toPorts:
    - ports:
      - port: "8080"
        protocol: "TCP"
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "kube-system-allow"
  namespace: kube-system
spec:
  description: "flux-plane specific access rules."
  endpointSelector:
    matchLabels:
      {}
  ingress:
  - fromEntities:
    - cluster
    - host
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "networking-allow"
  namespace: networking
spec:
  endpointSelector:
    matchLabels:
      {}
  ingress:
  - fromEntities:
    - cluster   
    - host
  egress:
  - toEntities:
    - cluster   
    - host
# ---
# apiVersion: "cilium.io/v2"
# kind: CiliumNetworkPolicy
# metadata:
#   name: "nfs-allow"
#   namespace: nfs-provisioner
# spec:
#   description: "nfs specific access rules."
#   endpointSelector:
#     matchLabels:
#       {}
#   egress:
#   - toCIDR:
#     - 192.168.67.2/24
#   - toEntities:
#     - kube-apiserver
#   ingress:
#   - fromCIDR:
#     - 192.168.67.2/24
