cluster-policies/in-cluster-only.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-within-namespace
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels: 
      k8s:io.kubernetes.pod.namespace: monitoring
  egress:
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": monitoring
  - toEntities:
    - host
    - remote-node
    - kube-apiserver
  ingress:
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": monitoring
  - fromEntities:
    - host
    - kube-apiserver
    - health
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-within-namespace
  namespace: apps
spec:
  endpointSelector:
    matchLabels: 
      k8s:io.kubernetes.pod.namespace: apps
  egress:
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": apps
  ingress:
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": apps
